--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,6 @@ figcaption {
 
 .order-summary h1, .summary, .contact {
     color: #000;
-    font-family: 'Love Ya Like A Sister', cursive;
     margin-top: 30px;
 }
 
@@ -175,7 +174,7 @@ h4 {
 
 .menu {
     margin-top: 30px;
-    background-image: url("../images/sec/b4.jpg");
+    background-image: url("../images/bckgrnd.jpg");
     padding: 0;
 }
 
